# x265gui

./: .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  UdpServer.cpp  UdpServer.h
